[package]
name = "ws_benchmark_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tungstenite = "0.13"
tokio-tungstenite = "0.15"
futures-util = "0.3.28"
